# 112407

./: NBmachine.py  NBmachine_pre.py  一審問題.docx  名牌.ai  四技第112407組-有評有G—您的AI智能偵測器-系統簡報.pptx
1009/css/: 1009.css
123/: index.html
GoogleAPI-爬蟲/poetry-finalproject/: googlemaps爬蟲.py  pyproject.toml
TMP/: aa.csv  comment.csv  comment_test.csv  store.csv
dj/: index.html
dj/Gapp/: admin.py  models.py  urls.py  views.py
dj/dj/: settings.py  urls.py
dj/templates/: grouping.html  login.html  result.html  search.html  test.html
dj1011/: db.sqlite3
dj1011/Gapp/: admin.py  models.py  views.py
dj_yoyo/dj/: urls.py  (+1 more)
expansion/: content.js  index.html  manifest.json  popup.html  popup.js
first_extension/: background.js  content.js  manifest.json  popup.html  popup.js
grouping/: grouping.html  main.js
templates/: grouping.html  index.html  login.html  register.html  reply.html  result.html  summary.html
圖片/: 名牌.ai
專題下半場/: 112-1_【112年11月22日繳件規定】專題資料繳件注意事項.docx  112-1_【113年1月3日繳件規定】專題最終文件說明.docx  112-1_專題海報簡介.docx  comment.csv  demo.ai  demo.擴充程式.ai  dump-comment-202311151139-all  index.html  ~$2、13、14章+附錄.docx  四技第112407組-有評有G-一審.docx  四技第112407組-有評有G-複審.docx  四技第112407組-有評有「G」-海報簡介.docx  四技第11247組-有評有G_您的AI智能偵測器_系統評分簡報_0601.pptx  專題作品電子文件上網授權書_.doc  專題海報.ai  專題海報_新.ai  第10章.docx  第11、12章.docx  第12、13、14章+附錄.docx  第8章.docx  第9章.docx
舊的程式檔案/dj1011/: pyproject.toml  test.xlsx
舊的程式檔案/dj1011/Gapp/: apps.py
舊的程式檔案/dj1011/Gapp/migrations/: 0001_initial.py
舊的程式檔案/dj1011/dj/: urls.py
舊的程式檔案/dj1011/static/css/: search.css
舊的程式檔案/dj1011/static/js/: text.js
(+259 files in other folders)
